services/cluster-services/traefik/overlays/nebula/ingress-dashboard.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`nebula-traefik.nebulanet.xyz`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
